<resources>
    <string name="app_name">RetroHub</string>
    <string name="action_settings">Settings</string>
    <string name="commingSoon">Próximamente</string>
    <string name="work_in_progress">Estamos trabajando en ello</string>
    <string name="empty_message">¡Ups! Parece que aún no tienes nada.</string>
    <string name="empty_message_months">¡Ups! Parece que no tienes nada en los últimos dos meses.</string>

    <!-- Default values -->
    <string name="large_text">La Torralba, que lo supo, se fue tras él y seguíale a pie y descalza desde lejos, con un bordón en la mano y con unas alforjas al cuello, donde llevaba, según es fama, un pedazo de espejo y otro de un peine y no sé qué botecillo de mudas para la cara; mas llevase lo que llevase, que yo no me quiero meter ahora en averiguallo, solo diré que dicen que el pastor llegó con su ganado a pasar el río Guadiana, y en aquella sazón iba crecido y casi fuera de madre, y por la parte que llegó no había barca ni barco, ni quien le pasase a él ni a su ganado de la otra parte, de lo que se congojó mucho porque veía que la Torralba venía ya muy cerca y le había de dar mucha pesadumbre con sus ruegos y lágrimas; mas tanto anduvo mirando, que vio un pescador que tenía junto a sí un barco, tan pequeño, que solamente podían caber en él una persona y una cabra; y, con todo esto, le habló y concertó con él que le pasase a él y a trecientas cabras que llevaba. Entró el pescador en el barco y pasó una cabra; volvió y pasó otra; tornó a volver y tornó a pasar otra.» </string>
    <string name="medium_text">La Torralba, que lo supo, se fue tras él y seguíale a pie y descalza desde lejos, con un bordón en la mano y con unas alforjas al cuello, donde llevaba, según es fama, un pedazo de espejo y otro de un peine y no sé</string>
    <!-- Main view -->
    <string name="new_retro_button">Crear nueva retrospectiva</string>
    <string name="welcome_message">¡Hola </string>

    <!-- Login -->
    <string name="user_label_edit_text">Nombre de usuario</string>
    <string name="password_label_edit_text">Contraseña</string>
    <string name="register_link">¿No tienes cuenta? Regístrate.</string>
    <string name="login_action">Entrar</string>
    <string name="login_error_message">Usuario y/o contraseña incorrectos.</string>
    <string name="login_loading">Cargando contenido...</string>
    <string name="alert_empty_field">Por favor rellene todos los campos</string>
    <string name="alert_error_service">El nombre de usuario y/o contraseñas son incorrectos</string>

    <!-- Register -->
    <string name="register_title">¡Regístrate!</string>
    <string name="register_toolbar">Crear una cuenta</string>
    <string name="fill_form">Rellene los siguientes campos con sus datos:</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="select_document_type">Selecciona el tipo de documento</string>
    <string name="scrum_master_question">¿Eres Scrum Master?</string>
    <string name="nie">NIE</string>
    <string name="nif">NIF</string>
    <string name="document_number">Número de documento</string>
    <string name="email">E-mail: xxxxx@gmail.es</string>
    <string name="password">Contraseña</string>
    <string name="ready_button">¡Listo!</string>
    <string name="fill_field">Este campo es obligatorio</string>
    <string name="fill_field_incorrect">Dato no válido</string>
    <string name="error_message_title">Parece que hay un problema</string>
    <string name="error_message_authentication">El nombre de usuario elegido no está disponible.</string>
    <string name="error_message_service">Ha ocurrido un problema de conexión, pruebe a intentarlo más tarde.</string>
    <string name="invalid_username">Este nombre de usuario ya existe</string>


    <!-- Menú privado -->
    <string name="my_retros">Mis retrospectivas</string>
    <string name="discover_zone">Descubre</string>
    <string name="help_zone">Ayuda</string>
    <string name="customize_zone">Personaliza tu App</string>
    <string name="user_data_zone">Mi perfil</string>
    <string name="exit_app">Cerrar sesión</string>


    <!-- Buttons -->
    <string name="decline_button">Cancelar</string>
    <string name="accept_button">Aceptar</string>

    <!-- Personal Area -->
    <string name="email_label">Email</string>
    <string name="retro_star">Tu retrospectiva estrella es...</string>
    <string name="find_retros">"Descubre nuevos tipos de retrospectivas pulsando aquí"</string>
    <string name="retros_comparative">"Comparación del número de retrospectivas del mes en curso y del anterior."</string>
    <string name="without_data">Sin datos</string>

    <!-- Exit app -->
    <string name="are_you_sure">¿Estás seguro de querer cerrar la sesión?</string>
    <string name="are_you_sure_title">Salir</string>

    <!-- Create retro -->
    <!-- Type selection -->
    <string name="choose_type">Elige el tipo de retrospectivas que vas a realizar:</string>
    <string name="type_release">Fin de release</string>
    <string name="type_sprint">Fin de sprint</string>
    <string name="choose_subtype">Elige el subtipo que prefieras:</string>
    <string name="starfish">Estrella de mar</string>
    <string name="sailboat">Barco de vela</string>
    <string name="three_little_pigs">Los 3 cerditos</string>
    <string name="semaphore">Semáforo</string>
    <string name="fourl">4Ls</string>
    <string name="fast_and_furious">Fast and Furious</string>
    <string name="next_step">Continuar</string>
    <string name="message_help_type_view">En esta pantalla puedes seleccionar el tipo de retrospectiva pulsando uno de los radio button que hay en la pantalla, solo se podrá seleccionar uno de ellos. \n \n Para la selección de subtipo se tendrá que pulsar el subtipo deseado. Cuando sea seleccionado el subtipo este se marcará con un icono de un check. \n \n Para continuar con el siguiente paso de la pantalla debe pulsar el botón azul que pone "Continuar".</string>

    <!-- Title screen -->
    <string name="title_view">¿Cómo quieres llamar a tu retrospectiva?</string>
    <string name="title_view_toolbar">Título</string>
    <string name="input_label_title">Título de la retrospectiva</string>
    <string name="empty_error_message">El título de la retrospectiva no puede estar vacío</string>
    <string name="add_user">Añadir</string>
    <string name="add_user_title">Añade a los miembros de un equipo</string>
    <string name="message_help_title_view">En esta pantalla deberás indicar el título que le quieras dar a la retrospectiva escriéndolo en la caja de texto que hay al inicio de la pantalla. \n \n Para pasar a la siguiente pantalla pulse el botón "Continuar".</string>

    <!--Fill list info -->
    <string name="retro_card_description">Descripción</string>
    <string name="retro_field">Sección</string>
    <string name="retro_empty_error">¡Ups! Aún no ha rellenado nada</string>
    <!-- Retro preview -->
    <string name="empty_field">No se ha añadido nada aún</string>
    <!-- Retro saved -->
    <string name="retro_ok">¡Tu retrospectiva se ha guardado con éxito!</string>
    <string name="retro_error">Ups... Parece que ha habido un problema, compruebe su conexión e inténtelo de nuevo más tarde.</string>

    <!-- Main view -->
    <string name="title_help">Ayuda</string>
    <string name="message_help">Esta es la pantalla principal de la aplicación, está compuesta de las siguientes partes:\n \n \t - Carrusel de retrospectivas: muestra las distintas retrospectivas que has realizado en la aplicación. \n \t - Acceso directo a la creación de retrospectivas: Es el botón que se encuentra en la esquina inferior derecha. \n \t - Menú: se encuentra en la esquina superior derecha, tiene varios accesos a las distintas zonas de la aplicación.</string>
    <string name="add_team">Añadir equipo</string>
    <string name="author_retro">"Autor/a: "</string>

    <!-- Add team view -->
    <string name="add_team_toolbar">Crear un equipo</string>
    <string name="fill_info">Rellene los siguientes campos con los datos del equipo:</string>
    <string name="team_name">Nombre del equipo</string>
    <string name="team_username">Nombre del miembro del equipo</string>
    <string name="user_not_found_title">Usuario no encontrado</string>
    <string name="user_not_found">El usuario que has introducido no existe, por favor comprueba que el nombre es el correcto.</string>
    <string name="empty_user_name">Este campo no puede estar vacío</string>

</resources>
