<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.retrohub.MainActivity">


    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/user_data_zone"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_customize"
        android:orderInCategory="100"
        android:title="@string/customize_zone"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_my_retrospectives"
        android:orderInCategory="100"
        android:title="@string/my_retros"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_discover"
        android:orderInCategory="100"
        android:title="@string/discover_zone"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help_zone"
        app:showAsAction="never"/>


</menu>
