<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingStart="@dimen/m_margin"
    android:paddingEnd="@dimen/m_margin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/l_margin"
        android:fontFamily="@font/catamaran_medium"
        android:text="@string/fill_info"
        android:textColor="@color/black_secondary"
        android:textSize="@dimen/m_text_size"
        app:layout_constraintTop_toTopOf="parent"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/m_margin"
        android:hint="@string/team_name"
        app:layout_constraintTop_toBottomOf="@id/label_info"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/team_username"
        app:errorEnabled="true"
        android:layout_marginEnd="@dimen/s_margin"
        android:layout_marginTop="@dimen/m_margin"
        app:layout_constraintEnd_toStartOf="@id/add_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_user"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        app:layout_constraintBottom_toBottomOf="@+id/user_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_name_input" />


    <TextView
        android:id="@+id/list_usernames"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_margin"
        android:textColor="@color/black_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_input"
        tools:text="alvarezo, hmdiero y nurinuria" />

    <Button
        android:id="@+id/next_step"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:layout_margin="@dimen/l_margin"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>