<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_login"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_app"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="@dimen/l_margin"
        android:layout_marginEnd="@dimen/l_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@mipmap/icon_app" />


    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/catamaran_medium"
        android:textColor="@color/error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/user_name_input"
        app:layout_constraintStart_toStartOf="@+id/user_name_input"
        app:layout_constraintTop_toBottomOf="@+id/icon_app"
        tools:text="@string/alert_empty_field"
        tools:visibility="visible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginStart="@dimen/l_margin"
        android:layout_marginEnd="@dimen/l_margin"
        android:layout_marginTop="@dimen/s_margin"
        android:hint="@string/user_label_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginStart="@dimen/l_margin"
        android:layout_marginEnd="@dimen/l_margin"
        android:layout_marginTop="@dimen/s_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_input"
        app:layout_constraintVertical_bias="0"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/button_login"
        style="@style/mainTextAcent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentLight"
        android:text="@string/login_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/create_account"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintVertical_bias="0.3" />

    <View
        android:id="@+id/loading_background"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        tools:visibility="gone"
        android:alpha="0.80"
        android:elevation="2dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationLoading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loading_background"
        app:layout_constraintStart_toStartOf="@+id/loading_background"
        app:layout_constraintTop_toTopOf="@+id/loading_background"
        app:layout_constraintVertical_bias="0.40"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:fontFamily="@font/catamaran_medium"
        android:textColor="@color/black_secondary"
        android:text="@string/login_loading"
        android:textSize="@dimen/l_text_size"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationLoading"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationLoading"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationLoading" />


</androidx.constraintlayout.widget.ConstraintLayout>