<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_selection_type"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/help_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/title_label_screen"
        app:layout_constraintTop_toTopOf="@+id/title_label_screen"
        app:srcCompat="@drawable/ic_help" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/input_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="next_step,title_input,title_label_screen"/>


    <TextView
        android:id="@+id/title_label_screen"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/l_margin"
        android:gravity="center"
        android:text="@string/title_view"
        android:textColor="@color/black_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/l_margin"
        android:hint="@string/input_label_title"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_label_screen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMÑNOPQRSTUVWXYZ1234567890"
            android:inputType="text"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/teams_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="add_user_title,team_list,loading_small_anim"/>


    <TextView
        android:id="@+id/add_user_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/l_margin"
        android:gravity="center"
        android:text="@string/add_user_title"
        android:textColor="@color/black_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_small_anim"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/xl_margin"
        app:layout_constraintTop_toBottomOf="@+id/title_input"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/small_loading" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/team_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/l_margin"
        android:background="@color/colorPrimaryExtraLight"
        app:layout_constraintBottom_toTopOf="@+id/next_step"
        app:layout_constraintTop_toBottomOf="@+id/add_user_title"
        app:layout_constraintVertical_bias="0"/>



    <Button
        android:id="@+id/next_step"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:layout_margin="@dimen/l_margin"
        app:layout_constraintBottom_toBottomOf="parent" />


    <include
        android:id="@+id/loading_title_view"
        layout="@layout/view_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>